[package]
name = "astral"
version = "0.0.1"
license = "MIT"
description = "cli to interact with running neovim instances"
homepage = "https://github.com/comfysage/astral"
authors = ["comfysage"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = [ "derive" ] }
clap_complete = "4.5.7"
